@@ -1,5 +1,6 @@
 Version Next
 
+    - Make @FieldBuilder.ProvidesField search in super-types for annotated methods
     - Fixed bug in MethodAnnotationScanner that allowed duplicate methods
     - Upgraded several library dependencies
 
